force-app/zurich-base/main/default/objects/FollowUp__c/FollowUp__c.object-meta.xml
<CustomObject>
    <label>Seguimiento</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Follow Up Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seguimientos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>