force-app/zurich-base/main/default/objects/FollowUp__c/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <label>Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No iniciada</fullName>
            </value>
            <value>
                <fullName>Activa</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>