force-app/zurich-base/main/default/objects/FollowUp__c/fields/Campaign_with_status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_with_status__c</fullName>
    <formula>IMAGE( 
CASE( Campaign_Status__c, 
&quot;Activa&quot;, &quot;/img/rypple/24-goals.png&quot;,
&quot;/s.gif&quot;), 
&quot;Active Flag&quot;)
&amp; &quot; &quot; 
&amp; 
Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>