force-app/zurich-base/main/default/objects/FollowUp__c/fields/Candidates__c.field-meta.xml
<CustomField>
    <fullName>Candidates__c</fullName>
    <label>Candidates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>