force-app/zurich-base/main/default/objects/FollowUp__c/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <formula>Account__r.NationalId__c</formula>
    <label>CIF</label>
    <type>Text</type>
</CustomField>