force-app/zurich-base/main/default/objects/FollowUp__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>