force-app/zurich-base/main/default/objects/FollowUp__c/fields/Emissions__c.field-meta.xml
<CustomField>
    <fullName>Emissions__c</fullName>
    <label>Emissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>