force-app/zurich-base/main/default/objects/FollowUp__c/fields/Emissions_currency__c.field-meta.xml
<CustomField>
    <fullName>Emissions_currency__c</fullName>
    <label>Emissions (€)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>