force-app/zurich-base/main/default/objects/FollowUp__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>