force-app/zurich-base/main/default/objects/FollowUp__c/fields/IntermediaryCode__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryCode__c</fullName>
    <formula>Account__r.INFOIntermediaryCode__c</formula>
    <label>Intermediary Code</label>
    <type>Text</type>
</CustomField>