force-app/zurich-base/main/default/objects/FollowUp__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>