force-app/zurich-base/main/default/objects/FollowUp__c/fields/Notify__c.field-meta.xml
<CustomField>
    <fullName>Notify__c</fullName>
    <label>Notify</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Responsable de Negocio</fullName>
            </value>
            <value>
                <fullName>Consultor Empresas</fullName>
            </value>
            <value>
                <fullName>Director Empresas</fullName>
            </value>
            <value>
                <fullName>Consultor Vida Colectivo</fullName>
            </value>
            <value>
                <fullName>Consultor Vida</fullName>
            </value>
            <value>
                <fullName>Director Vida</fullName>
            </value>
            <value>
                <fullName>Director Zona</fullName>
            </value>
            <value>
                <fullName>Consultor Pyme</fullName>
            </value>
            <value>
                <fullName>Pyme Manager</fullName>
            </value>
            <value>
                <fullName>Director Territorial</fullName>
            </value>
            <value>
                <fullName>Todos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>