force-app/zurich-base/main/default/objects/FollowUp__c/fields/Offer_Conversions__c.field-meta.xml
<CustomField>
    <fullName>Offer_Conversions__c</fullName>
    <label>Offer Conversions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>