force-app/zurich-base/main/default/objects/FollowUp__c/fields/Offers__c.field-meta.xml
<CustomField>
    <fullName>Offers__c</fullName>
    <label>Offers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>