force-app/zurich-base/main/default/objects/FollowUp__c/fields/Participates__c.field-meta.xml
<CustomField>
    <fullName>Participates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participates</label>
    <type>Checkbox</type>
</CustomField>