force-app/zurich-base/main/default/objects/FollowUp__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaña</fullName>
            </value>
            <value>
                <fullName>Salto de tramo</fullName>
            </value>
            <value>
                <fullName>Formación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>